# SmartCalc

./: CMakeLists.txt  Makefile  RealMakefile  SmartCalc  a.out  buttons_text_add_on_click.cpp  calc.c  calculator.cpp  calculator.h  calculator.pro  calculator.ui  colors.h  compile_commands.json  converting.c  generator.py  get_data.c  input.c  lint.sh  main.c  main.cpp  main.h  qt.cpp  resourses.qrc  test
.cache/clangd/index/: buttons_text_add_on_click.cpp.4BBD9C08F4E7B456.idx  calc.c.4995094D8ED9547D.idx  calc_test.c.605986F137A2E679.idx  calc_test.h.16671A2747511305.idx  calculator.cpp.6A66BF971506E9AA.idx  calculator.h.0DCDA2A2C654AF2E.idx  colors.h.4232BF600FFC9EA2.idx  converting.c.4F59A0AB1D820020.idx  credit_calculator.c.476050345ABAB428.idx  credit_test.c.0FFAE4740CF28801.idx  main.cpp.F1E45852664259BA.idx  main.h.137C3A948428575C.idx  polish_test.c.4913FE8586E44B01.idx  qcustomplot.cpp.19B823AA3141527E.idx  qcustomplot.h.247ACFAF6658A1D7.idx  smartcalc.c.25F0332CD7AB8462.idx  validate.c.1324C3903238D55F.idx
backend/: calc.c  converting.c  credit_calculator.c  smartcalc.c  smartcalc.h  validate.c
calculator/: converting.c  main.h  smartcalc.c  validate.c
docs/: docs.aux  docs.dvi  docs.tex  docs.toc
frontend/: actions.cpp  calculator.cpp  calculator.h  credit_debit.cpp  credit_debit.h  main.cpp
tests/: CMakeLists.txt  cacl_test.h  calc_test.c  calc_test.h  colors.h  credit_test.c  polish_test.c
tests/credit_calculator/: credit_test.c
testus/: testus.c
trash/: Makefile
ui/: calculator.ui  credit_debit.ui
